--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -6,7 +6,7 @@ $roboto: 'Roboto', sans-serif;
 $sans-serif: $roboto;
 $serif: $lora;
 
-$base-font-family: $serif;
+$base-font-family: $sans-serif;
 $header-font-family: $sans-serif;
 
 // Sizes
